# class_public

./: .gitattributes  .gitignore  .gitignore_myv  AUTHORS  CLASS_rename.py  CMakeLists.txt  CNAME  COPYING  CPU  CPU.py  CPU.sh  EnergyRate.p  LICENSE  MANIFEST.in  Makefile  NOTES.txt  README  README-HS.md  README.md  README.rst  REFCLASS.pre  ScriptTemp.p  UG.ini  Unimodular gravity  __init__.py  base_2015_plikHM_TT_lowTEB_lensing.ini  base_2018_plikHM_TTTEEE_lowl_lowE_lensing.ini  benchmark.ini  cFS  cgwb.ini  chi2pl0.01.pre  chi2pl0.1.pre  chi2pl1.pre  chi2pl10.pre  chi2plT0.01.pre  chi2plT0.01lensed.pre  chi2plT0.1.pre  chi2plT0.1lensed.pre  cl_2permille.pre  cl_3permille.pre  (+55 more)
.fontconfig/: 3830d5c3ddfd5cd38a049b759396e72e-le64.cache-3  87f5e051180a7a75f16eb6fe7dbd3749-le64.cache-3
CLASSnet_Workspace/: README.txt  manifest.json
Calc_f/: DarkAges_CalcF.py  DarkAges_Class.py
DM_Annihilation/: DM_Annihilation_coeff  ForPlots_ee_1TeV_zf20_106
DM_Annihilation_old/: fEM_muons_1GeV_smallhalos.py
DarkAgesModule/: .gitignore  DarkAges_Example.py  HISTORY  VERSION  extra.yaml  requirements.txt
HyRec_2017/: history.c  hydrogen.c  hyrec  hyrec_21cm.c  hyrectools.c
KiDS/: KiDS.data  __init__.py
Lya/: .__init__.py.swp  1  Lya.data  Lya_ABD.data  __init__.py
RealSpaceInterface/: README  config.py  tornadoserver.py
classnet_workspace/: README.txt
classy.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
cosmorec/: CosmoRec.cpp  CosmoRec.h  Makefile.in
cosmorec_lite/: CosmoRec  CosmoRec.cpp  CosmoRec.h  Makefile  Makefile.in  README  main.cpp
cpp/: ClassEngine.cc  ClassEngine.hh  Engine.cc  Engine.hh  Makefile  README  testKlass.cc
doc/: README
essai/: BI - test 1.ipynb  BI - test 2 V_end.ipynb  BI - test 3.ipynb  BI - test 4 - find phi_star.ipynb  BI - test6 - pb slow roll.ipynb  Comparison cosmological models.ipynb  essai liste methodes.ipynb  list of methods.ipynb  test1 - calcul r inflation.ipynb
external_Pk/: README.md  generate_Pk_example.py  generate_Pk_example_w_tensors.py
external_fz/: DarkAges.py  DarkAges_CalcF_grid.py  DarkAges_Example.py  DarkAges_HiggsPortal_CalcF.py  DarkAges_HiggsPortal_CalcF_Direct.py  DarkAges_HiggsPortal_InitDirectGrid.py  DarkAges_HiggsPortal_InitGrid.py  DarkAges_HiggsPortal_LogPrior_CalcF.py  DarkAges_InitializeTransfer.py  extra.yaml  setup.py
hyrec/: Makefile  arrays.c  arrays.h  cosmorec.h  history.c  history.c.orig  history.h  hydrogen.c  hydrogen.c.orig  hydrogen.h  hyrec  hyrec.h  hyrec.sh  hyrectools.c  newfunctions.c
hyrec_2017/: energy_injection.c  helium.c  history.c  hydrogen.c  hyrec.c
include/: alloc_track.h  arrays.h  background.h  bessel.h  class.h  common.h  dei_rkck.h  distortions.h  evolver_ndf15.h  evolver_rkck.h  extrapolate_source.h  fft.h  fourier.h  growTable.h  harmonic.h  hermite3_interpolation_csource.h  hermite4_interpolation_csource.h  hermite6_interpolation_csource.h  hypergeom.h  hyperspherical.h  input.h  lensing.h  macros_precision.h  matter.h  nonlinear.h  output.h  parallel.h  parser.h  perturbations.h  precision.h  precision_macros.h  precisions.h  primordial.h  quadrature.h  sparse.h  spectra.h  svnversion.h  thermodynamics.h  thermodynamics.h.bak2  thermodynamics_tmp.h  (+5 more)
main/: class.c  class.cpp  class.h  class_cache.c
notebooks/: GW_CLASS-Tutorial.ipynb  Growth_with_w.ipynb  Thomas_PPF.ipynb  check_PPF_approx.ipynb  cl_ST.ipynb  cltt_terms.ipynb  distances.ipynb  many_times.ipynb  neutrinohierarchy.ipynb  one_k.ipynb  one_time.ipynb  test.ipynb  test_gwb.ipynb  test_hmcode.ipynb  thermo.ipynb  varying_neff.ipynb  varying_pann.ipynb  warmup.ipynb
notebooks-ede/: 1-Introduction.ipynb  2-CMB-Comparison.ipynb  3-Effective-Priors.ipynb  4-Matter-Power-Spectrum.ipynb  5-DES-EDE_mPk.ipynb
output/: explanatory00_parameters.ini  explanatory00_unused_parameters
output_10nov/: stars_recfast_thermodynamics.py
output_14oct/: ModelStarsReio_AvecCorrection_thermodynamics.py  ModelStarsReio_AvecHelium_cl.py  ModelStarsReio_AvecHelium_thermodynamics.py  ModelStarsReio_noDM_thermodynamics.py  Standard_Reio_0079_cl.py  Standard_Reio_0079_thermodynamics.py  Standard_Reio_z6.5_cl.py  Standard_Reio_z6.5_thermodynamics.py  adiabatic_thermodynamics.py  electrons_1GeV_ModelStarsReio_DM_noHalos_thermodynamics.py  electrons_1GeV_ModelStarsReio_and_halos_z30_B8_thermodynamics.py  electrons_1GeV_noStars_halos_z30_B8_thermodynamics.py  electrons_1GeV_oldStars_halos_z30_B8_recfast_thermodynamics.py  electrons_1GeV_oldStars_halos_z30_B8_thermodynamics.py  muons_1GeV_ModelStarsReio_and_halos_z30_B7_thermodynamics.py
output_23oct/: 10_p_ann_planck_thermodynamics.py  Standard_planck_zreio65_cl.py
output_29janv/: Decay_Gamma1e2_Omega20_cl.py  Decay_Gamma5_Omega20_cl.py  Standard_Planck2015_cl.py  Standard_Planck2015_pk.py
output_4fev/: check_decay_noDCDM_cl.py  check_decay_noDCDM_pk.py  check_decay_noDCDM_pk_nl.py
output_5fev/: EM_Decay_feff_tau1e15_thermodynamics.py  F1_G100_pk.py
output_cl/: Muons_1GeV_NoHalo_0079_thermodynamics.py  Muons_1GeV_zh30_B8_0079_thermodynamics.py  Standard_Cl_79_cl.py  Standard_Cl_79_thermodynamics.py
output_decay/: EMDecay_Tau1e14_f1emoins8_D1_onthespot_thermodynamics.py  EMDecay_Tau1e15_f1emoins7_D1_samethetas_thermodynamics.py  EMDecay_Tau1e24_f1_D1_onthespot_cl.py  EMDecay_Tau1e24_f1_D1_onthespot_thermodynamics.py  EMDecay_Tau1e25_f1_1GeV_thermodynamics.py  EMDecay_Tau1e25_f1_D1_onthespot_cl.py  EMDecay_Tau1e25_f1_onthespot_thermodynamics.py  EMDecay_Tau1e25_f1emoins6_1GeV_thermodynamics.py  Standard_Planck2015_reio65_cl.py  Standard_Planck2015_reio65_noT_thermodynamics.py  Standard_Planck2015_reio65_samethetas_cl.py  Standard_Planck2015_reio65_thermodynamics.py  Standard_Planck2015_reio65_withT_thermodynamics.py  reio_nonethermodynamics.py  test_EMDecay_G100_Omega1_cl.py  test_EMDecay_G100_Omega20_cl.py  test_EMDecay_G10_Omega20_cl.py  test_hyrec_thermodynamics.py
output_new/: electrons_1GeV_zh10_B4_taureio79_thermodynamics.py  electrons_1GeV_zh30_B8_taureio79_thermodynamics.py  test_thermodynamics.py
output_test/: ModelStarsReio_noDM_cl.py  NoReio_cl.py  (+27 more)
(+3570 files in other folders)
